fixed footer align problem

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -3,6 +3,7 @@
   justify-content: space-around;
   padding: 1vh 0 2vh 0;
   white-space: nowrap;
+  text-align: center;
 }
 
 .footer-borderBox {
