--- a/src/Components/SecondSection/SecondPage.css
+++ b/src/Components/SecondSection/SecondPage.css
@@ -11,6 +11,7 @@
 .secondPageContainer-title {
   margin: 12vh 0;
   font-family: 'Mincho';
+  text-align: center;
 }
 
 .secondPageContainer-middlecontent {
